--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 nav {
   background: rgb(37, 9, 37);
   color: white;
@@ -11,27 +13,21 @@ nav {
   display: flex;
   align-items: center;
   padding: 0 12px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
 nav ul {
   list-style-type: none;
 }
-
 .gameContainer {
-  background-color: rgb(251, 98, 243);
   display: flex;
   justify-content: center;
   margin-top: 50px;
 }
-
 .container {
   display: grid;
   grid-template-columns: repeat(3, 10vw);
   grid-template-rows: repeat(3, 10vw);
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: relative;
 }
-
 .box {
   border: 2px solid black;
   font-size: 8vw;
@@ -40,32 +36,55 @@ nav ul {
   justify-content: center;
   align-items: center;
 }
-
 .box:hover {
   background-color: rgb(224, 211, 223);
 }
-
+.info {
+  font-size: 22px;
+}
 .gameInfo {
-  padding: 0 34px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 5px 34px;
 }
-
 .imgbox img {
-  display: none;
+  width: 0;
+  transition: width 1s ease-in-out;
 }
-
 .bt-0 {
   border-top: 0;
 }
-
 .bb-0 {
   border-bottom: 0;
 }
-
 .bl-0 {
   border-left: 0;
 }
-
 .br-0 {
   border-right: 0;
+}
+.line {
+  background-color: black;
+  height: 3px;
+  width: 0;
+  position: absolute;
+  transition: width 1s ease-in-out;
+}
+#reset {
+  margin: 0 23px;
+  padding: 5px 18px;
+  background: #f3e7f9;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 15px;
+}
+@media screen and (max-width: 800px) {
+  .gameContainer {
+    flex-wrap: wrap;
+  }
+  .gameInfo {
+    margin-top: 50px;
+  }
+  .container {
+    grid-template-columns: repeat(3, 12vw);
+    grid-template-rows: repeat(3, 12vw);
+  }
 }
